k8s/vaultwarden/03-vaultwarden-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  labels:
    app: vaultwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      containers:
        - name: vaultwarden
          image: vaultwarden/server:latest
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: nfs-storage
              mountPath: /data/
              subPath: vaultwarden
      volumes:
        - name: nfs-storage
          persistentVolumeClaim:
            claimName: nfs-general-pvc
