k8s/vaultwarden/01-vaultwarden-service.yml
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
spec:
  selector:
    app: vaultwarden
  ports:
    - name: web
      port: 80
      targetPort: web
